@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<package packagerversion="1.9.2" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
+<package packagerversion="1.9.1" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
  <name>turba</name>
  <channel>pear.horde.org</channel>
  <summary>A web based address book</summary>
@@ -29,7 +29,7 @@
   <active>yes</active>
  </lead>
  <date>2011-03-22</date>
- <time>05:54:34</time>
+ <time>02:29:01</time>
  <version>
   <release>3.0.0RC1</release>
   <api>3.0.0</api>
@@ -43,6 +43,8 @@
 * First release candidate for Horde 4.
 * [cjh] Fix storing of binary fields.
 * [mjr] Fix/refactor IMSP driver.
+* [mjr] Fix issue that caused erroneous file listings for objects in sources
+        without a __uid value.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -926,6 +928,8 @@
 * First release candidate for Horde 4.
 * [cjh] Fix storing of binary fields.
 * [mjr] Fix/refactor IMSP driver.
+* [mjr] Fix issue that caused erroneous file listings for objects in sources
+        without a __uid value.
    </notes>
   </release>
  </changelog>
