@@ -2,6 +2,8 @@
 v3.0-RC1
 --------
 
+[mjr] Fix issue that caused erroneous file listings for objects in sources
+      without a __uid value.
 [cjh] Fix storing of binary fields.
 [mjr] Fix/refactor IMSP driver.
 
